--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,49 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-mutate-approach="sync"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column h-100">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Daniel Atanasovski - s3658474@student.rmit.edu.au</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+
     <%= yield %>
+
+
+    <footer class="footer fixed-bottom mt-auto py-3 bg-light">
+      <div class="container text-center">
+        <!-- Facebook -->
+        <a class="btn" href="http://facebook.com" role="button">
+         <i class="fab fa-facebook-square fa-3x" style="color: #4267B2;"></i>
+        </a>
+
+        <!-- Twitter -->
+        <a class="btn" href="http://twitter.com" role="button">
+         <i class="fab fa-twitter-square fa-3x" style="color: #1DA1F2;"></i>
+        </a>
+
+        <!-- LinkeIn-->
+        <a class="btn" href="http://linkedin.com" role="button">
+         <i class="fab fa-linkedin fa-3x" style="color: #0e76a8;"></i>
+        </a>
+      </div>
+    </footer>
+
   </body>
 </html>
