--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,10 @@
 
     <%= yield %>
 
-
     <footer class="footer fixed-bottom mt-auto py-3 bg-light">
+
       <div class="container text-center">
+        <p>Highest Level: Credit</p>
         <!-- Facebook -->
         <a class="btn" href="http://facebook.com" role="button">
          <i class="fab fa-facebook-square fa-3x" style="color: #4267B2;"></i>
@@ -43,7 +44,7 @@
         </a>
 
         <!-- LinkeIn-->
-        <a class="btn" href="http://linkedin.com" role="button">
+        <a class="btn" href="https://www.linkedin.com/in/daniel-atanasovski-94797918b/" role="button">
          <i class="fab fa-linkedin fa-3x" style="color: #0e76a8;"></i>
         </a>
       </div>
